@@ -18,18 +18,32 @@
 # this test. Or, hey, if we don't support this kind of symbol
 # versioning test: don't run it.
 
+set lib $blddir/src/.libs/libstdc++.so
+set baseline_subdir "[eval exec $cxx --print-multi-dir]"
+
 # Build the support objects.
 v3-build_support
 
-if { (${v3-symver} == 0) || ![info exists baseline_file] \
-	 || ![file exists $baseline_file] \
-	 || ![file exists "../src/.libs/libstdc++.so"] } {
+if { (${v3-symver} == 0) || ![info exists baseline_dir] \
+	 || ![file exists $baseline_dir] \
+	 || ![file exists $lib] } {
     return
 }
 
+set baseline_file \
+    [file join $baseline_dir $baseline_subdir "baseline_symbols.txt"]
+# If there is no ABI-specific reference file use that of the default ABI.
+if ![file exists $baseline_file] {
+    set baseline_file [file join $baseline_dir "baseline_symbols.txt"]
+}
+if ![file exists $baseline_file] {
+    return
+}
+send_log "Checking $lib against $baseline_file\n"
+
 # Figure out what symbols are defined by the active build of the library.
 remote_exec "build" "$srcdir/../scripts/extract_symvers" \
-    [list "../src/.libs/libstdc++.so" "current_symbols.txt"]
+    [list $lib "current_symbols.txt"]
 
 # Build the abi_check program.
 if { [v3_target_compile "$srcdir/util/testsuite_abi_check.cc" "abi_check" \
